@@ -18,14 +18,14 @@ def test_nissan():
     assert '%s' % vin.brand == 'Nissan (Nissan)'
 
     details = vin.details
-    assert details.model_code == 'J'
-    assert details.model == 'Maxima'
-    assert details.body_code == '1'
-    assert details.body == ['Sedan 4-Door', 'Standard Body Truck']
-    assert details.engine_code == 'N'
-    assert details.engine == 'VH45DE'
-    assert details.plant_code == 'T'
-    assert details.plant == ['Tochigi', 'Oppama']
-    assert details.serial == '000001'
+    assert details.model.code == 'J'
+    assert details.model.name == 'Maxima'
+    assert details.body.code == '1'
+    assert details.body.name == ['Sedan 4-Door', 'Standard Body Truck']
+    assert details.engine.code == 'N'
+    assert details.engine.name == 'VH45DE'
+    assert details.plant.code == 'T'
+    assert details.plant.name == ['Tochigi', 'Oppama']
+    assert details.serial.code == '000001'
 
     assert vin.verify_checksum()
