@@ -18,12 +18,12 @@ def test_opel():
     assert '%s' % vin.brand == 'Opel (Opel/Vauxhall)'
 
     details = vin.details
-    assert details.model_code == 'P'
-    assert details.model == ['Astra J', 'Zafira C']
-    assert details.body_code == '6'
-    assert details.body == 'Hatchback 5-Door'
-    assert details.engine_code == 'B'
-    assert details.engine == 'A14XER100HP'
-    assert details.plant_code == 'C'
-    assert details.plant == 'Yelabuga'
-    assert details.serial == '123456'
+    assert details.model.code == 'P'
+    assert details.model.name == ['Astra J', 'Zafira C']
+    assert details.body.code == '6'
+    assert details.body.name == 'Hatchback 5-Door'
+    assert details.engine.code == 'B'
+    assert details.engine.name == 'A14XER100HP'
+    assert details.plant.code == 'C'
+    assert details.plant.name == 'Yelabuga'
+    assert details.serial.code == '123456'
